force-app/main/default/objects/Account/fields/Calculate__c.field-meta.xml
<CustomField>
    <fullName>Calculate__c</fullName>
    <formula>Field__c  &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate</label>
    <type>Text</type>
</CustomField>