force-app/main/default/objects/Account/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <displayFormat>F-{0000}</displayFormat>
    <label>Field29677</label>
    <type>AutoNumber</type>
</CustomField>