force-app/main/default/objects/Account/fields/NewField1__c.field-meta.xml
<CustomField>
    <fullName>NewField1__c</fullName>
    <label>NewField1</label>
    <type>Email</type>
</CustomField>