force-app/main/default/objects/Account/fields/NewField2__c.field-meta.xml
<CustomField>
    <fullName>NewField2__c</fullName>
    <label>NewField2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>