force-app/main/default/objects/Account/fields/sample__c.field-meta.xml
<CustomField>
    <fullName>sample__c</fullName>
    <displayFormat>S-{0000}</displayFormat>
    <label>sample</label>
    <type>AutoNumber</type>
</CustomField>