force-app/main/default/objects/Account/fields/Test28117__c.field-meta.xml
<CustomField>
    <fullName>Test28117__c</fullName>
    <description>Test new field 28117</description>
    <label>Test28117</label>
    <length>20</length>
    <type>Text</type>
</CustomField>