force-app/main/default/objects/Account/recordTypes/RecordType29021.recordType-meta.xml
<RecordType>
    <fullName>RecordType29021</fullName>
    <active>true</active>
    <label>RecordType29021</label>
</RecordType>