force-app/main/default/objects/Account/validationRules/Sample_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Sample_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>CreatedDate  &lt;  LastModifiedDate</errorConditionFormula>
    <errorMessage>error found</errorMessage>
</ValidationRule>